--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
+    "morgan": "^1.10.1",
     "node-fetch": "^2.7.0",
     "ollama": "^0.5.17",
     "openai": "^5.15.0"
