--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,17 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest",
+    "test:watch": "jest --watch", 
+    "test:routes": "jest tests/routes",
+    "test:auth": "jest tests/routes/authRoutes.test.js",
+    "test:products": "jest tests/routes/productRoutes.test.js",
+    "test:orders": "jest tests/routes/orderRoutes.test.js",
+    "test:purchases": "jest tests/routes/purchaseRoutes.test.js", 
+    "test:users": "jest tests/routes/userRoutes.test.js",
+    "test:coverage": "jest --coverage"
+    
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -21,6 +31,10 @@
     "openai": "^5.15.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.0"
+    "@types/jest": "^30.0.0",
+    "jest": "^30.1.1",
+    "mongodb-memory-server": "^10.2.0",
+    "nodemon": "^3.0.0",
+    "supertest": "^7.1.4"
   }
 }
